--- a/squad_optimization/requirements.txt
+++ b/squad_optimization/requirements.txt
@@ -1,6 +1,7 @@
 requests
 pandas
 numpy
-psycopg2
+psycopg2-binary; sys_platform == 'darwin'
+psycopg2; sys_platform != 'darwin'
 sqlalchemy
 python-dotenv
