--- a/fpl_fixtures/requirements.txt
+++ b/fpl_fixtures/requirements.txt
@@ -3,3 +3,7 @@ pandas
 requests
 jupyter
 ipykernel
+python-dotenv
+psycopg2-binary; sys_platform == 'darwin'
+psycopg2; sys_platform != 'darwin'
+sqlalchemy
